--- a/web/index-dev-template.html
+++ b/web/index-dev-template.html
@@ -10,7 +10,15 @@
     <div id="app"></div>
 
     <!-- Dependencies -->
-    <script src="https://unpkg.com/react@<%= reactVersion %>/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@<%= reactVersion %>/umd/react-dom.development.js"></script>
+    <script
+      src="https://unpkg.com/react@<%= reactVersion %>/umd/react.development.js"
+      integrity="sha384-xQwCoNcK/7P3Lpv50IZSEbJdpqbToWEODAUyI/RECaRXmOE2apWt7htari8kvKa/"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@<%= reactVersion %>/umd/react-dom.development.js"
+      integrity="sha384-E9IgxDsnjKgh0777N3lXen7NwXeTsOpLLJhI01SW7idG046SRqJpsW2rJwsOYk0L"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
